--- a/pom.xml
+++ b/pom.xml
@@ -10,6 +10,15 @@
 <name>cryostat</name>
 <url>http://maven.apache.org</url>
 
+<repositories>
+  <repository>
+    <id>jmc-libs</id>
+    <name>Adoptium JDK Mission Control Core Libraries</name>
+    <url>https://adoptium.jfrog.io/artifactory/jmc-libs</url>
+    <layout>default</layout>
+  </repository>
+</repositories>
+
 <properties>
   <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
   <java.version>17</java.version>
@@ -78,7 +87,9 @@
   <com.google.dagger.version>2.47</com.google.dagger.version>
   <com.google.dagger.compiler.version>${com.google.dagger.version}</com.google.dagger.compiler.version>
 
-  <io.cryostat.core.version>2.30.1</io.cryostat.core.version>
+  <!-- TODO: fix this once the jmc9 changes go into cyrostat-core -->
+  <io.cryostat.core.version>2.31.0-SNAPSHOT</io.cryostat.core.version>
+  <org.openjdk.jmc.version>9.0.0</org.openjdk.jmc.version>
 
   <org.openjdk.nashorn.core.version>15.4</org.openjdk.nashorn.core.version>
   <org.apache.commons.lang3.version>3.13.0</org.apache.commons.lang3.version>
@@ -152,6 +163,41 @@
     <groupId>io.cryostat</groupId>
     <artifactId>cryostat-core</artifactId>
     <version>${io.cryostat.core.version}</version>
+  </dependency>
+  <dependency>
+    <groupId>org.openjdk.jmc</groupId>
+    <artifactId>common</artifactId>
+    <version>${org.openjdk.jmc.version}</version>
+  </dependency>
+  <dependency>
+    <groupId>org.openjdk.jmc</groupId>
+    <artifactId>flightrecorder</artifactId>
+    <version>${org.openjdk.jmc.version}</version>
+  </dependency>
+  <dependency>
+    <groupId>org.openjdk.jmc</groupId>
+    <artifactId>flightrecorder.configuration</artifactId>
+    <version>${org.openjdk.jmc.version}</version>
+  </dependency>
+  <dependency>
+    <groupId>org.openjdk.jmc</groupId>
+    <artifactId>flightrecorder.rules</artifactId>
+    <version>${org.openjdk.jmc.version}</version>
+  </dependency>
+  <dependency>
+    <groupId>org.openjdk.jmc</groupId>
+    <artifactId>flightrecorder.rules.jdk</artifactId>
+    <version>${org.openjdk.jmc.version}</version>
+  </dependency>
+  <dependency>
+    <groupId>org.openjdk.jmc</groupId>
+    <artifactId>jdp</artifactId>
+    <version>${org.openjdk.jmc.version}</version>
+  </dependency>
+  <dependency>
+    <groupId>org.openjdk.jmc</groupId>
+    <artifactId>rjmx.common</artifactId>
+    <version>${org.openjdk.jmc.version}</version>
   </dependency>
   <dependency>
     <groupId>org.openjdk.nashorn</groupId>
